update ui timeline

--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
     <div
       class="h-[100vh] w-full bg-slate-900 bg-cover bg-left"
       style="background-image: url('../assets/img/hero-img.png')"
-	  id="home"
+      id="home"
     >
       <!-- container -->
       <div class="mx-auto h-full px-5 lg:w-[1200px] lg:px-0">
@@ -169,7 +169,7 @@
             <!-- call-to-action  -->
             <div class="flex w-full justify-center gap-3 md:gap-8">
               <a
-			  href="#competition"
+                href="#competition"
                 class="rounded-sm bg-primary-0 px-10 py-3 font-semibold tracking-wide text-primary-900 md:px-16 md:py-4"
               >
                 Daftar
@@ -450,7 +450,7 @@
                 class="-lg:z-10 relative flex h-36 w-full items-center justify-center sm:h-52 lg:absolute lg:h-full"
               >
                 <img
-                  src="/assets//img/lomba-podcast.png"
+                  src="/assets//img/lomba-web.png"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -503,7 +503,7 @@
                 class="-lg:z-10 relative flex h-36 w-full items-center justify-center sm:h-52 lg:absolute lg:h-full"
               >
                 <img
-                  src="/assets//img/lomba-podcast.png"
+                  src="/assets//img/lomba-fotografi.png"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -556,7 +556,7 @@
                 class="-lg:z-10 relative flex h-36 w-full items-center justify-center sm:h-52 lg:absolute lg:h-full"
               >
                 <img
-                  src="/assets//img/lomba-podcast.png"
+                  src="/assets//img/lomba-essai.png"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -609,7 +609,7 @@
                 class="-lg:z-10 relative flex h-36 w-full items-center justify-center sm:h-52 lg:absolute lg:h-full"
               >
                 <img
-                  src="/assets//img/lomba-podcast.png"
+                  src="/assets//img/lomba-poster.png"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -656,7 +656,7 @@
     </div>
 
     <!-- component -->
-    <div class="mx-auto h-full w-full bg-[#1b1b1b] py-16">
+    <div class="mx-auto h-full w-full bg-[#1b1b1b] py-32">
       <div class="text-center">
         <h1
           href=""
@@ -669,7 +669,7 @@
           >
         </h1>
         <!-- underline-decoration -->
-        <div class="mb-6 flex w-full justify-center md:mb-8">
+        <div class="mb-6 flex w-full justify-center md:mb-16">
           <div class="h-[3px] w-28 bg-primary-100"></div>
         </div>
       </div>
@@ -687,7 +687,7 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="md:px-3text-xs md:py-3font-normal bg-primary-75 px-2 py-2 text-neutral-900 shadow-xl md:text-sm"
+              class="border-l-4 border-primary-300 bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
             >
               <b>28</b> September - <b>8</b> Oktober 2022
             </h3>
@@ -698,7 +698,7 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3 class="text-sm font-normal text-white md:text-base">
-              Registrasi Lomba Batch 1
+              Registrasi Lomba <span class="text-neutral-75">(Batch 1)</span>
             </h3>
           </div>
         </div>
@@ -710,9 +710,9 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="md:px-3text-xs md:py-3font-normal bg-primary-75 px-2 py-2 text-neutral-900 shadow-xl md:text-sm"
+              class="border-l-4 border-primary-300 bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
             >
-              <b>28</b> September - <b>8</b> Oktober 2022
+              <b>9</b> Oktober - <b>13</b> Oktober 2022
             </h3>
           </div>
           <!-- left -->
@@ -721,7 +721,7 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3 class="text-sm font-normal text-white md:text-base">
-              Registrasi Lomba Batch 1
+              Pengumpulan Karya <span class="text-neutral-75">(Batch 1)</span>
             </h3>
           </div>
         </div>
@@ -733,9 +733,9 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="md:py-3text-xs bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:px-3 md:text-sm"
+              class="border-l-4 border-primary-300 bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
             >
-              <b>28</b> September - <b>8</b> Oktober 2022
+              <b>9</b> Oktober - <b>22</b> Oktober 2022
             </h3>
           </div>
           <!-- left -->
@@ -744,7 +744,7 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3 class="text-sm font-normal text-white md:text-base">
-              Registrasi Lomba Batch 1
+              Registrasi Lomba <span class="text-neutral-75">(Batch 2)</span>
             </h3>
           </div>
         </div>
@@ -755,7 +755,7 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3 class="text-sm font-normal text-white md:text-base">
-              Pengumpulan Karya Batch 2
+              Pengumpulan Karya <span class="text-neutral-75">(Batch 2)</span>
             </h3>
           </div>
           <!-- left -->
@@ -764,7 +764,7 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="md:px-3text-xs bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
+              class="md:px-3text-xs border-l-4 border-primary-400 bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
             >
               <b>23</b> Oktober - <b>2</b> November 2022
             </h3>
@@ -777,7 +777,7 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3 class="text-sm font-normal text-white md:text-base">
-              Pengumpulan Karya Batch 2
+              Open Registrasi Seminar
             </h3>
           </div>
           <!-- left -->
@@ -786,9 +786,9 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="md:px-3text-xs bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
+              class="md:px-3text-xs border-l-4 border-primary-400 bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
             >
-              <b>23</b> Oktober - <b>2</b> November 2022
+              <b>28</b> Oktober - <b>11</b> November 2022
             </h3>
           </div>
         </div>
@@ -799,7 +799,7 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3 class="text-sm font-normal text-white md:text-base">
-              Pengumpulan Karya Batch 2
+              Seminar, Awarding, & Puncak Acara
             </h3>
           </div>
           <!-- left -->
@@ -808,9 +808,9 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:py-3 md:px-3 md:text-sm"
+              class="border-l-4 border-primary-400 bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:py-3 md:px-3 md:text-sm"
             >
-              <b>23</b> Oktober - <b>2</b> November 2022
+              <b>12</b> November 2022
             </h3>
           </div>
         </div>
