--- a/src/index.html
+++ b/src/index.html
@@ -851,7 +851,7 @@
               </div>
               <div class="flex justify-center gap-6">
                 <a
-                  href="https://www.instagram.com/bytesfest"
+                  href="mailto:bytesfestmikroptik@gmail.com"
                   target="_blank"
                   rel="noreferrer"
                   class="text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-100"
@@ -867,7 +867,7 @@
 					<img class="h-7 w-7" src="/assets/img/icon-instagram.png" alt="">
                 </a>
 				<a
-                  href="https://www.instagram.com/bytesfest"
+                  href="https://www.tiktok.com/@bytesfest"
                   target="_blank"
                   rel="noreferrer"
                   class="text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-100"
@@ -875,7 +875,7 @@
 					<img class="h-7 w-7" src="/assets/img/icon-tik-tok.png" alt="">
                 </a>
 				<a
-                  href="https://www.instagram.com/bytesfest"
+                  href="https://wa.me/6285711666888"
                   target="_blank"
                   rel="noreferrer"
                   class="text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-100"
