--- a/src/index.html
+++ b/src/index.html
@@ -187,38 +187,46 @@
           <div
             class="absolute -bottom-4 left-1/2 mx-auto h-20 w-full -translate-x-1/2 rounded-sm border-[0.5px] border-neutral-200 bg-neutral-900 px-5 opacity-75 sm:h-24 sm:w-[480px] md:w-[520px] lg:-bottom-5 lg:h-28 lg:w-[400px] lg:px-0"
           >
-            <div
-              class="relative -mt-4 flex h-full w-full items-center justify-around text-2xl"
+            <p
+              class="text-shadow-hero-sm absolute w-full -translate-y-8 text-center text-xs tracking-wide text-white"
             >
-              <p
-                class="text-shadow-hero-sm absolute -top-4 text-xs tracking-wide text-white"
-              >
-                Dimulai dalam :
-              </p>
-              <span class="relative"
+              Dimulai dalam :
+            </p>
+            <div
+              class="relative -mt-4 grid h-full w-full grid-cols-7 content-center px-2 text-2xl"
+            >
+              <span class="relative text-center"
                 ><p class="md:text-3xl" id="countDownDay">00</p>
-                <p class="absolute text-xs text-primary-25 md:text-sm">
+                <p
+                  class="absolute w-full text-center text-xs text-primary-25 md:text-sm"
+                >
                   Hari
                 </p></span
               >
-              <span class="">:</span>
+              <span class="text-center">:</span>
               <span class="relative"
-                ><p class="md:text-3xl" id="countDownHour">00</p>
-                <p class="absolute text-xs text-primary-25 md:text-sm">
+                ><p class="text-center md:text-3xl" id="countDownHour">00</p>
+                <p
+                  class="absolute w-full text-center text-xs text-primary-25 md:text-sm"
+                >
                   Jam
                 </p></span
               >
-              <span class="">:</span>
+              <span class="text-center">:</span>
               <span class="relative"
-                ><p class="md:text-3xl" id="countDownMinute">00</p>
-                <p class="absolute text-xs text-primary-25 md:text-sm">
+                ><p class="text-center md:text-3xl" id="countDownMinute">00</p>
+                <p
+                  class="absolute w-full text-center text-xs text-primary-25 md:text-sm"
+                >
                   Menit
                 </p></span
               >
-              <span class="">:</span>
+              <span class="text-center">:</span>
               <span class="relative"
-                ><p class="md:text-3xl" id="countDownSecond">00</p>
-                <p class="absolute text-xs text-primary-25 md:text-sm">
+                ><p class="text-center md:text-3xl" id="countDownSecond">00</p>
+                <p
+                  class="absolute w-full text-center text-xs text-primary-25 md:text-sm"
+                >
                   Detik
                 </p></span
               >
@@ -696,7 +704,7 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="border-l-4 border-primary-300 bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
+              class="border-l-4 border-primary-300 bg-primary-50 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
             >
               <b>28</b> September - <b>8</b> Oktober 2022
             </h3>
@@ -719,7 +727,7 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="border-l-4 border-primary-300 bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
+              class="border-l-4 border-primary-300 bg-primary-50 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
             >
               <b>9</b> Oktober - <b>13</b> Oktober 2022
             </h3>
@@ -742,7 +750,7 @@
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="border-l-4 border-primary-300 bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
+              class="border-l-4 border-primary-300 bg-primary-50 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:px-3 md:py-3 md:text-sm"
             >
               <b>9</b> Oktober - <b>22</b> Oktober 2022
             </h3>
@@ -839,13 +847,21 @@
           </div>
           <div class="mt-4 text-center lg:col-span-6 lg:mt-16">
             <div class="flex-col">
-              <div class="mb-5 text-2xl font-bold lg:text-4xl">
-                <h1>Bytesfest 2022</h1>
+              <div class="mb-5 text-2xl lg:text-3xl">
+                <h1
+                  class="text-shadow-hero-md font-semibold tracking-wider text-primary-0"
+                >
+                  Bytes<span class="text-primary-75">fest</span>
+                  <span
+                    class="bg-gradient-to-r from-primary-100 to-cyan-300 bg-clip-text text-transparent"
+                    >2022</span
+                  >
+                </h1>
               </div>
-              <div class="mb-5 font-light">
+              <div class="mb-5 text-primary-25">
                 <span> Bunch of Youth Technottraction and Sport Festival </span>
               </div>
-              <div class="mb-5 font-light">
+              <div class="mb-5 text-xs text-primary-50 md:text-sm">
                 <span> © Copyright 2022 - Bytesfest 2022 </span>
               </div>
             </div>
@@ -853,7 +869,7 @@
           <div class="lg:col-span-3 lg:mt-16 lg:text-center">
             <div class="flex-col items-center text-center lg:text-center">
               <div class="text-md mt-2 font-light">
-                <h2 class="mb-5 text-xl font-light">Contact Person</h2>
+                <h2 class="mb-5 text-base md:text-lg">Contact Person</h2>
               </div>
               <div class="flex justify-center gap-6">
                 <a
@@ -936,57 +952,40 @@
     </button>
 
     <!-- This example requires Tailwind CSS v2.0+ -->
+    <!-- modal -->
+    <!-- wrap -->
     <div
-      class="relative z-50 hidden opacity-0 transition duration-700"
+      class="relative z-50 hidden opacity-0 transition duration-300"
       aria-labelledby="modal-title"
       role="dialog"
       aria-modal="true"
       id="modal-gas"
     >
-      <!--
-	  Background backdrop, show/hide based on modal state.
-  
-	  Entering: "ease-out duration-300"
-		From: "opacity-0"
-		To: "opacity-100"
-	  Leaving: "ease-in duration-200"
-		From: "opacity-100"
-		To: "opacity-0"
-	-->
-
-      <div class="fixed inset-0 z-10 overflow-y-auto">
+      <div class="fixed inset-0 z-10 overflow-y-auto shadow-2xl">
+        <!-- backdrop -->
         <div
-          class="fixed inset-0 z-20 bg-gray-500 bg-opacity-75 transition-opacity duration-1000"
+          class="fixed inset-0 z-20 bg-neutral-700 bg-opacity-75 backdrop-blur-sm transition-opacity duration-700"
           id="backdrop"
         ></div>
+        <!-- modal-box -->
         <div
-          class="absolute left-1/2 top-1/2 z-40 -translate-x-1/2 -translate-y-1/2 p-4 text-center sm:items-center sm:p-0"
+          class="absolute left-1/2 top-1/2 z-40 w-96 -translate-x-1/2 -translate-y-1/2 p-4 text-center sm:items-center sm:p-0"
         >
-          <!--
-		  Modal panel, show/hide based on modal state.
-  
-		  Entering: "ease-out duration-300"
-			From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-			To: "opacity-100 translate-y-0 sm:scale-100"
-		  Leaving: "ease-in duration-200"
-			From: "opacity-100 translate-y-0 sm:scale-100"
-			To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-		-->
           <div
-            class="relative transform rounded-[3.5rem] border-4 bg-primary-400 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-xl"
+            class="relative transform rounded-md border bg-primary-0 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-xl"
           >
             <div class="relative z-0 h-32 w-full">
               <img
                 src="/assets/img/mascot-main.png"
-                class="absolute top-[-10rem] left-1/2 z-0 w-2/3 -translate-x-1/2"
+                class="absolute left-1/2 bottom-0 h-auto w-32 -translate-x-1/2"
               />
             </div>
-            <div class="relative z-50 rounded-[3.5rem] bg-primary-400">
-              <div class="relative px-4 pb-4">
+            <div class="relative z-50 rounded-md bg-primary-0">
+              <div class="relative">
                 <div style="text-align-last: center">
-                  <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                  <div class="mt-4 text-center">
                     <h1
-                      class="shadow-header z-[60] text-7xl font-semibold text-white"
+                      class="z-[60] text-3xl font-semibold text-neutral-500"
                       id="modal-title"
                     >
                       Gaskeun!!
@@ -994,20 +993,25 @@
                   </div>
                 </div>
               </div>
-              <div class="px-8 pt-6 text-center text-xl">
+              <div class="mb-5 mt-2">
+                <p class="px-5 text-center text-sm text-neutral-500">
+                  Yuk segera registrasi dan konfirmasi pembayaran kamu!
+                </p>
+              </div>
+              <div
+                class="flex h-36 w-full flex-col justify-center gap-3 bg-primary-25 px-5 text-center text-sm"
+              >
                 <a
                   id="btnRegistrasi"
                   target="_blank"
-                  class="block w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
+                  class="inline-block rounded-sm bg-neutral-600 px-6 py-3 text-neutral-0 shadow-lg"
                 >
-                  Registrasi
+                  Registrasi >
                 </a>
-              </div>
-              <div class="px-8 pt-6 pb-16 text-center text-xl">
                 <a
                   id="btnKonfirmasi"
                   target="_blank"
-                  class="block w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
+                  class="inline-block border-neutral-300 bg-primary-0 py-3 font-medium text-neutral-600 shadow-lg"
                 >
                   Konfirmasi Pembayaran
                 </a>
