--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
   <body
     class="z-40 overflow-x-hidden bg-neutral-900 font-poppins text-white transition-all"
   >
+    <!-- LOAD ANIMATION START -->
+    <!-- LOAD ANIMATION END -->
+
     <!-- HERO SECTION START -->
 
     <!-- navigation-start -->
@@ -896,7 +899,7 @@
                     alt=""
                   />
                 </a>
-				<a
+                <a
                   href="https://www.tiktok.com/@bytesfest"
                   target="_blank"
                   rel="noreferrer"
@@ -908,7 +911,7 @@
                     alt=""
                   />
                 </a>
-				<a
+                <a
                   href="https://wa.me/6285711666888"
                   target="_blank"
                   rel="noreferrer"
@@ -974,6 +977,17 @@
           <div
             class="relative transform rounded-md border bg-primary-0 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-xl"
           >
+            <!-- close-button -->
+            <button
+              id="close-button"
+              class="group absolute right-2 top-2 text-neutral-400"
+            >
+              <img
+                src="/assets/img/icons/icons8-close-24.png"
+                alt=""
+                class="h-6 w-6 opacity-80 group-hover:opacity-50"
+              />
+            </button>
             <div class="relative z-0 h-32 w-full">
               <img
                 src="/assets/img/mascot-main.png"
