--- a/src/index.html
+++ b/src/index.html
@@ -122,10 +122,10 @@
                   >
                 </li>
                 <li class="">
-                  <a
-                    href="#"
+                  <button
+                    onclick="submissionLomba()"
                     class="text-shadow-hero-sm decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
-                    >Submission</a
+                    >Submission</button
                   >
                 </li>
               </ul>
@@ -784,9 +784,9 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="md:px-3text-xs border-l-4 border-primary-400 bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
+              class="md:px-3 text-xs border-l-4 border-primary-400 bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
             >
-              <b>23</b> Oktober - <b>2</b> November 2022
+              <b>23</b> Oktober - <b>27</b> Oktober 2022
             </h3>
           </div>
         </div>
@@ -806,7 +806,7 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="md:px-3text-xs border-l-4 border-primary-400 bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
+              class="md:px-3 text-xs border-l-4 border-primary-400 bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
             >
               <b>28</b> Oktober - <b>11</b> November 2022
             </h3>
@@ -962,7 +962,85 @@
       aria-labelledby="modal-title"
       role="dialog"
       aria-modal="true"
-      id="modal-gas"
+      id="modal-submission"
+    >
+      <div class="fixed inset-0 z-10 overflow-y-auto shadow-2xl">
+        <!-- backdrop -->
+        <div
+          class="fixed inset-0 z-20 bg-neutral-700 bg-opacity-75 backdrop-blur-sm transition-opacity duration-700"
+          id="backdrop-submission"
+        ></div>
+        <!-- modal-box -->
+        <div
+          class="absolute left-1/2 top-1/2 z-40 w-96 -translate-x-1/2 -translate-y-1/2 p-4 text-center sm:items-center sm:p-0"
+        >
+          <div
+            class="relative transform rounded-md border bg-primary-0 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-xl"
+          >
+            <!-- close-button -->
+            <button
+              id="close-button-submission"
+              class="group absolute right-2 top-2 text-neutral-400 z-50"
+            >
+              <img
+                src="/assets/img/icons/icons8-close-24.png"
+                alt=""
+                class="h-6 w-6 opacity-80 group-hover:opacity-50"
+              />
+            </button>
+            <div class="relative z-0 h-32 w-full">
+              <img
+                src="/assets/img/mascot-main.png"
+                class="absolute left-1/2 bottom-0 h-auto w-32 -translate-x-1/2"
+              />
+            </div>
+            <div class="relative z-50 rounded-md bg-primary-0">
+              <div class="relative">
+                <div style="text-align-last: center">
+                  <div class="mt-4 text-center">
+                    <h1
+                      class="z-[60] text-3xl font-semibold text-neutral-500"
+                      id="modal-title"
+                    >
+                      Gaskeun!!
+                    </h1>
+                  </div>
+                </div>
+              </div>
+              <div class="mb-5 mt-2">
+                <p class="px-5 text-center text-sm text-neutral-500">
+                  Yuk segera kumpulkan submission kamu!
+                </p>
+              </div>
+              <div
+                class="flex h-36 w-full flex-col justify-center gap-3 bg-primary-25 px-5 text-center text-sm"
+              >
+                <a
+                  id="btnSubmissionBatch1"
+                  target="_blank"
+                  class="inline-block rounded-sm bg-neutral-600 px-6 py-3 text-neutral-0 shadow-lg"
+                >
+					Submission Batch 1
+                </a>
+                <a
+                  id="btnSubmissionBatch2"
+                  target="_blank"
+                  class="inline-block border-neutral-300 bg-primary-0 py-3 font-medium text-neutral-600 shadow-lg"
+                >
+					Submission Batch 2
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="relative z-50 hidden opacity-0 transition duration-300"
+      aria-labelledby="modal-title"
+      role="dialog"
+      aria-modal="true"
+      id="modal-daftar"
     >
       <div class="fixed inset-0 z-10 overflow-y-auto shadow-2xl">
         <!-- backdrop -->
@@ -980,7 +1058,7 @@
             <!-- close-button -->
             <button
               id="close-button"
-              class="group absolute right-2 top-2 text-neutral-400"
+              class="group absolute right-2 top-2 text-neutral-400 z-50"
             >
               <img
                 src="/assets/img/icons/icons8-close-24.png"
