fix bug in load page animation

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
       Bytesfest 2022 - Bunch of Youth Technottraction and Sport Festival
     </title>
     <link rel="icon" type="image/x-icon" href="/assets/img/logo-mini.png" />
+    <!-- script load for animejs -->
+    <script src="../dist/anime.min.js"></script>
   </head>
   <body
     class="relative z-40 overflow-x-hidden bg-neutral-900 font-poppins text-white transition-all"
@@ -94,7 +96,7 @@
         </div>
       </div>
       <div
-        class="backdrop-bg fixed top-0 left-0 z-50 hidden h-full w-full backdrop-blur-xl transition-all duration-1000"
+        class="backdrop-bg fixed top-0 left-0 z-50 hidden h-full w-full backdrop-blur-lg transition-all duration-1000"
       ></div>
     </div>
     <div
@@ -1186,7 +1188,7 @@
     </div>
 
     <!-- script -->
-    <script src="../dist/anime.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="../assets/js/script.js"></script>
   </body>
