--- a/src/index.html
+++ b/src/index.html
@@ -258,7 +258,7 @@
             <p
               class="absolute w-full -translate-y-8 text-center text-xs tracking-wide text-white"
             >
-              Dimulai dalam :
+			  Puncak acara dimulai dalam :
             </p>
             <div
               class="relative -mt-4 grid h-full w-full grid-cols-7 content-center px-2 text-2xl"
@@ -464,7 +464,7 @@
         <div class="swiper-wrapper pb-12">
           <!-- slide-1 -->
           <div
-            class="swiper-slide flex h-auto w-11/12 justify-center rounded-sm sm:w-8/12"
+            class="swiper-slide swiper-slide-custom"
           >
             <div class="h-full w-full bg-neutral-800 lg:relative lg:h-[500px]">
               <!-- img -->
@@ -519,7 +519,7 @@
 
           <!-- slide-2 -->
           <div
-            class="swiper-slide flex h-auto w-11/12 justify-center rounded-sm sm:w-8/12"
+            class="swiper-slide swiper-slide-custom"
           >
             <div class="h-full w-full bg-neutral-800 lg:relative lg:h-[500px]">
               <!-- img -->
@@ -574,7 +574,7 @@
 
           <!-- slide-3 -->
           <div
-            class="swiper-slide flex h-auto w-11/12 justify-center rounded-sm sm:w-8/12"
+            class="swiper-slide swiper-slide-custom"
           >
             <div class="h-full w-full bg-neutral-800 lg:relative lg:h-[500px]">
               <!-- img -->
@@ -629,7 +629,7 @@
           </div>
           <!-- slide-4 -->
           <div
-            class="swiper-slide flex h-auto w-11/12 justify-center rounded-sm sm:w-8/12"
+            class="swiper-slide swiper-slide-custom"
           >
             <div class="h-full w-full bg-neutral-800 lg:relative lg:h-[500px]">
               <!-- img -->
@@ -684,7 +684,7 @@
 
           <!-- slide-5 -->
           <div
-            class="swiper-slide flex h-auto w-11/12 justify-center rounded-sm sm:w-8/12"
+            class="swiper-slide swiper-slide-custom"
           >
             <div class="h-full w-full bg-neutral-800 lg:relative lg:h-[500px]">
               <!-- img -->
@@ -713,7 +713,7 @@
                   berwarna-warni, yang memudahkan untuk menyuarakan masalah yang
                   terkait dan sesuai untuk ditampilkan di tempat umum. Kompetisi
                   Poster bisa diikuti oleh SMA sederajat dan mahasiswa aktif
-                  dari seluruh perguruan tinggi.
+                  dari seluruh perguruan tinggi. Kompetisi Poster bisa diikuti oleh SMA sederajat dan mahasiswa aktif dari seluruh perguruan tinggi dengan mengusung tema "Great Creation Start With Yourself".
                 </p>
               </div>
               <!-- action-button -->
@@ -736,13 +736,13 @@
             </div>
           </div>
         </div>
-        <div class="flex justify-evenly md:justify-center md:gap-24">
+        <div class="!flex !justify-evenly md:!justify-center md:gap-24">
           <div
-            class="swiper-button-prev relative -translate-y-1/4 rounded-full bg-primary-400 p-5 uppercase text-white hover:bg-primary-500 hover:shadow-lg"
+            class="swiper-button-prev !relative -translate-y-1/4 rounded-full bg-primary-400 p-5 uppercase !text-white hover:bg-primary-500 hover:shadow-lg"
           ></div>
-          <div class="swiper-pagination relative w-auto"></div>
+          <div class="swiper-pagination !relative !w-auto"></div>
           <div
-            class="swiper-button-next relative -translate-y-1/4 rounded-full bg-primary-400 p-5 uppercase text-white hover:bg-primary-500 hover:shadow-lg"
+            class="swiper-button-next !relative -translate-y-1/4 rounded-full bg-primary-400 p-5 uppercase !text-white hover:bg-primary-500 hover:shadow-lg"
           ></div>
         </div>
       </div>
