add link guidebook and konfirmasi pembayaran

--- a/src/index.html
+++ b/src/index.html
@@ -508,7 +508,7 @@
                   Daftar
                 </button>
                 <a
-                  href="https://link-guidebook"
+                  href="https://drive.google.com/file/d/13jL0ZNN5btPIYOR8wuEEyuKCZS95WLy1/view?usp=drivesdk"
                   target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
@@ -563,7 +563,7 @@
                   Daftar
                 </button>
                 <a
-                  href="https://link-guidebook"
+                  href="https://drive.google.com/file/d/13VsJ3OtOUk1WO-9ZUztMxzjOk8m1Wotv/view?usp=drivesdk"
                   target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
@@ -619,7 +619,7 @@
                   Daftar
                 </button>
                 <a
-                  href="https://link-guidebook"
+                  href="https://drive.google.com/file/d/13b2dJmiupKwzvYtkkDfOM_LkyiSnxdpp/view?usp=drivesdk"
                   target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
@@ -673,7 +673,7 @@
                   Daftar
                 </button>
                 <a
-                  href="https://link-guidebook"
+                  href="https://drive.google.com/file/d/13XfCabMIKSIVPl7aAawM8elxLM_kLN66/view?usp=drivesdk"
                   target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
@@ -727,7 +727,7 @@
                   Daftar
                 </button>
                 <a
-                  href="https://link-guidebook"
+                  href="https://drive.google.com/file/d/13n5tNEV-pY0391w3pUjIs8W-FruZvP0C/view?usp=drivesdk"
                   target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
